# xmsgeom

./: .appveyor.yml  .gitattributes  .travis.yml  CMakeLists.txt  README.md  ____init_____8py_source.html  _doxygen_mainpage_8md_source.html  _gm_boost_types_8h.html  _gm_boost_types_8h_source.html  _gm_extents_8cpp.html  _gm_extents_8cpp_source.html  _gm_extents_8h.html  _gm_extents_8h_source.html  _gm_extents_8t_8h.html  _gm_extents_8t_8h_source.html  _gm_multi_poly_intersection_sorter_8h.html  _gm_multi_poly_intersection_sorter_8h_source.html  _gm_multi_poly_intersection_sorter_terse_8cpp.html  _gm_multi_poly_intersection_sorter_terse_8cpp_source.html  _gm_multi_poly_intersection_sorter_terse_8h.html  _gm_multi_poly_intersection_sorter_terse_8h_source.html  _gm_multi_poly_intersector_8cpp.html  _gm_multi_poly_intersector_8cpp_source.html  _gm_multi_poly_intersector_8h.html  _gm_multi_poly_intersector_8h_source.html  _gm_multi_poly_intersector_8t_8h.html  _gm_multi_poly_intersector_8t_8h_source.html  _gm_multi_poly_intersector_data_8h.html  _gm_multi_poly_intersector_data_8h_source.html  _gm_poly_line_pt_redistributer_8cpp.html  _gm_poly_line_pt_redistributer_8cpp_source.html  _gm_poly_line_pt_redistributer_8h.html  _gm_poly_line_pt_redistributer_8h_source.html  _gm_poly_line_pt_redistributer_8t_8h.html  _gm_poly_line_pt_redistributer_8t_8h_source.html  _gm_polygon_8cpp.html  _gm_polygon_8cpp_source.html  _gm_polygon_8h.html  _gm_polygon_8h_source.html  _gm_polygon_8t_8h.html  (+257 more)
Doxygen/: Doxyfile  DoxygenMainpage.md
dev/: setenv.bat  setenv.sh  xmsprofile_debug  xmsprofile_release
search/: all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_4.js  classes_6.js  classes_8.js  classes_a.js  files_1.js  files_2.js  files_c.js  files_f.js  functions_0.js  functions_1.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+9 more)
test_package/: conanfile.py
xmsgeom/geometry/: GmExtents.cpp  GmMultiPolyIntersectionSorterTerse.cpp  GmMultiPolyIntersectionSorterTerse.h  GmMultiPolyIntersector.cpp  GmPolyLinePtRedistributer.cpp  GmPolygon.cpp  GmPolygon.t.h  GmPtSearch.cpp  GmTriSearch.cpp  geoms.cpp
xmsgeom/python/: xmsgeom_py.cpp
xmsgeom/python/triangulate/: TrTin_py.cpp  TrTin_pyt.py  TrTriangulatorPoints_py.cpp  triangulate_py.cpp
xmsgeom/triangulate/: TrBreaklineAdder.cpp  TrTin.cpp  TrTriangulator.cpp  TrTriangulatorPoints.cpp  TrTriangulatorPoints.h  triangles.cpp
xmsgeom/triangulate/detail/: TrAutoFixFourTrianglePts.cpp  TrOuterTriangleDeleter.cpp  triangulate.cpp
